Lets go DDD